--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "randominspiration",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Randomly generated inspirational quotes",
   "main": "index.js",
   "type": "module",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/aisudin/randominspiration"
+    "url": "git+https://github.com/aisudin/randominspiration.git"
   },
   "keywords": [
     "random",
