--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/aisudin/randominspiration"
+    "url": "git+https://github.com/aisudin/randominspiration.git"
   },
   "keywords": [
     "random",
